--- a/Skitter_Work/styles.css
+++ b/Skitter_Work/styles.css
@@ -31,4 +31,39 @@ body {
 	align-items: center;
 }
 
+
+
+.topnav {
+	background-color: #213;
+	overflow: hidden;
+}
+
+.topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 8px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active{
+	background-color: #4CAF50;
+	color: white;
+}
+
+.topnav-right{
+	float:right;
+}
+
+.skitter_logo {
+	background: url('skitter_small.png') left center no-repeat;
+	padding-left: 15px;
+}
+
 /***/
